// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressStep /> render error on past due 1`] = `
<Nav.Link
  className="ora-progress-nav px-0"
  disabled={false}
  href="link"
  onClick={[MockFunction onClick]}
>
  <Icon
    className="nav-icon my-auto text-danger-500"
    src={[MockFunction icons.Error]}
    style={
      {
        "bottom": "0.7rem",
        "position": "relative",
      }
    }
  />
  <div
    className="d-inline-block"
  >
    Test Step
    <p
      className="x-small m-0 text-danger-500"
      data-testid="sublabel-test-id"
    >
      Past due!
    </p>
  </div>
</Nav.Link>
`;

exports[`<ProgressStep /> render is complete and done will have sublabel 1`] = `
<Nav.Link
  className="ora-progress-nav px-0"
  disabled={false}
  href="link"
  onClick={[MockFunction onClick]}
>
  <Icon
    className="nav-icon my-auto"
    src={[MockFunction icons.CheckCircle]}
    style={
      {
        "bottom": "0.7rem",
        "position": "relative",
      }
    }
  />
  <div
    className="d-inline-block"
  >
    Test Step
    <p
      className="x-small m-0"
      data-testid="sublabel-test-id"
    >
      1 / 2
    </p>
  </div>
</Nav.Link>
`;

exports[`<ProgressStep /> render is complete but not done 1`] = `
<Nav.Link
  className="ora-progress-nav px-0"
  disabled={false}
  href="link"
  onClick={[MockFunction onClick]}
>
  <Icon
    className="nav-icon my-auto"
    src={[MockFunction icons.CheckCircle]}
  />
  <div
    className="d-inline-block"
  >
    Test Step
  </div>
</Nav.Link>
`;

exports[`<ProgressStep /> renders done step with correct icon 1`] = `
<Nav.Link
  className="ora-progress-nav px-0"
  disabled={false}
  href="link"
  onClick={[MockFunction onClick]}
>
  <Icon
    className="nav-icon my-auto"
    src={[MockFunction icons.Rule]}
  />
  <div
    className="d-inline-block"
  >
    Test Step
  </div>
</Nav.Link>
`;

exports[`<ProgressStep /> renders peer step with correct icon 1`] = `
<Nav.Link
  className="ora-progress-nav px-0"
  disabled={false}
  href="link"
  onClick={[MockFunction onClick]}
>
  <Icon
    className="nav-icon my-auto"
    src={[MockFunction icons.Highlight]}
  />
  <div
    className="d-inline-block"
  >
    Test Step
  </div>
</Nav.Link>
`;

exports[`<ProgressStep /> renders self step with correct icon 1`] = `
<Nav.Link
  className="ora-progress-nav px-0"
  disabled={false}
  href="link"
  onClick={[MockFunction onClick]}
>
  <Icon
    className="nav-icon my-auto"
    src={[MockFunction icons.Highlight]}
  />
  <div
    className="d-inline-block"
  >
    Test Step
  </div>
</Nav.Link>
`;

exports[`<ProgressStep /> renders studentTraining step with correct icon 1`] = `
<Nav.Link
  className="ora-progress-nav px-0"
  disabled={false}
  href="link"
  onClick={[MockFunction onClick]}
>
  <Icon
    className="nav-icon my-auto"
    src={[MockFunction icons.Highlight]}
  />
  <div
    className="d-inline-block"
  >
    Test Step
  </div>
</Nav.Link>
`;

exports[`<ProgressStep /> renders submission step with correct icon 1`] = `
<Nav.Link
  className="ora-progress-nav px-0"
  disabled={false}
  href="link"
  onClick={[MockFunction onClick]}
>
  <Icon
    className="nav-icon my-auto"
    src={[MockFunction icons.Edit]}
  />
  <div
    className="d-inline-block"
  >
    Test Step
  </div>
</Nav.Link>
`;
